[package]
name = "vtflib2-sys"
description = "FFI bindings for VTFLib2."
readme = "README.md"
categories = ["external-ffi-bindings", "multimedia::images"]
keywords = ["vtf", "vtflib"]
repository = "https://github.com/lasa01/vtflib2-sys.git"
license = "MIT OR Apache-2.0"
links = "VTFLib"
version = "0.1.0"
authors = ["Lassi Säike"]
edition = "2021"

[features]
static = []

[build-dependencies]
cmake = "0.1.50"
pkg-config = "0.3.27"
